@@ -28,10 +28,12 @@ rm -f ns1/managed.key.id
 rm -f ns1/root.db ns2/example.db ns3/secure.example.db
 rm -f ns2/algroll.db
 rm -f ns2/badparam.db ns2/badparam.db.bad
+rm -f ns2/cdnskey-kskonly.secure.db
 rm -f ns2/cdnskey-update.secure.db
-rm -f ns2/cdnskey.secure.db
 rm -f ns2/cdnskey-x.secure.db
+rm -f ns2/cdnskey.secure.db
 rm -f ns2/cds-auto.secure.db ns2/cds-auto.secure.db.jnl
+rm -f ns2/cds-kskonly.secure.db
 rm -f ns2/cds-update.secure.db ns2/cds-update.secure.db.jnl
 rm -f ns2/cds.secure.db ns2/cds-x.secure.db
 rm -f ns2/dlv.db
@@ -52,6 +54,7 @@ rm -f ns3/future.example.db ns3/trusted-future.key
 rm -f ns3/inline.example.db.signed
 rm -f ns3/kskonly.example.db
 rm -f ns3/lower.example.db ns3/upper.example.db ns3/upper.example.db.lower
+rm -f ns3/managed-future.example.db
 rm -f ns3/multiple.example.db ns3/nsec3-unknown.example.db ns3/nsec3.example.db
 rm -f ns3/nsec3.nsec3.example.db
 rm -f ns3/nsec3.optout.example.db
@@ -59,6 +62,7 @@ rm -f ns3/optout-unknown.example.db ns3/optout.example.db
 rm -f ns3/optout.nsec3.example.db
 rm -f ns3/optout.optout.example.db
 rm -f ns3/publish-inactive.example.db
+rm -f ns3/revkey.example.db
 rm -f ns3/rsasha256.example.db ns3/rsasha512.example.db
 rm -f ns3/secure.below-cname.example.db
 rm -f ns3/secure.nsec3.example.db
@@ -70,8 +74,6 @@ rm -f ns3/split-smart.example.db
 rm -f ns3/ttlpatch.example.db ns3/ttlpatch.example.db.signed
 rm -f ns3/ttlpatch.example.db.patched
 rm -f ns3/unsecure.example.db ns3/bogus.example.db ns3/keyless.example.db
-rm -f ns3/revkey.example.db
-rm -f ns3/managed-future.example.db
 rm -f ns4/managed-keys.bind*
 rm -f ns4/named.conf
 rm -f ns4/named.conf ns5/named.conf
@@ -82,10 +84,10 @@ rm -f ns7/split-rrsig.db ns7/split-rrsig.db.unsplit
 rm -f nsupdate.out*
 rm -f rndc.out.*
 rm -f signer/*.db
+rm -f signer/*.signed.post*
+rm -f signer/*.signed.pre*
 rm -f signer/example.db.after signer/example.db.before
 rm -f signer/example.db.changed
 rm -f signer/nsec3param.out
 rm -f signer/signer.out.*
 rm -f signing.out*
-rm -f signer/*.signed.pre*
-rm -f signer/*.signed.post*
