@@ -113,6 +113,13 @@ zone "cds-update.secure" {
 	allow-update { any; };
 };
 
+zone "cds-kskonly.secure" {
+	type master;
+	dnssec-dnskey-kskonly yes;
+	file "cds-kskonly.secure.db.signed";
+	allow-update { any; };
+};
+
 zone "cds-auto.secure" {
 	type master;
 	file "cds-auto.secure.db.signed";
@@ -133,6 +140,13 @@ zone "cdnskey-x.secure" {
 zone "cdnskey-update.secure" {
 	type master;
 	file "cdnskey-update.secure.db.signed";
+	allow-update { any; };
+};
+
+zone "cdnskey-kskonly.secure" {
+	type master;
+	dnssec-dnskey-kskonly yes;
+	file "cdnskey-kskonly.secure.db.signed";
 	allow-update { any; };
 };
 
