@@ -1,3 +1,6 @@
+4847.	[bug]		dnssec-dnskey-kskonly was not being honoured for
+			CDS and CDNSKEY. [RT #46755]
+
 4846.	[test]		Adjust timing values in runtime system test. Address
 			named.pid removal races in runtime system test.
 			[RT #46800]
